completed plugin setting
