# dbmodels/db.go
@@ -1,5 +1,7 @@
 package dbmodels
 
+const FieldMongoID = "_id"
+
 var db IDB
 
 func RegisterDB(idb IDB) {
@@ -12,6 +14,7 @@ func GetDB() IDB {
 
 type IDB interface {
 	IUsers
+	IPlugins
 }
 
 type IUsers interface {
@@ -21,4 +24,13 @@ type IUsers interface {
 	AddUser(user User) IDBError
 	GetUser(account, password string) (User, IDBError)
 	UpdatePassword(userId, oldPwd, newPwd string) IDBError
+}
+
+type IPlugins interface {
+	AddPlugin(p Plugin) IDBError
+	AuditedPlugin(pName, user string) IDBError
+	AddPluginVersion(pName string, version PluginVersion) IDBError
+	GetUserPlugins(userName string) ([]Plugin, IDBError)
+	GetPluginDetail(pName, uName string) (Plugin, IDBError)
+	UpdatePluginLastVersion(pName, lv string, publish bool) IDBError
 }
